# telegram-activity-emulator

./: .flake8  .gitignore  README.md  fake-users.tsv.example  pyproject.toml
.github/workflows/: deploy-tjs.yml  linters.yml  tests.yml
app/: __init__.py  broker.py  emulator.py  fake_session_refresh.py  observer.py  prepare_fake_users.py  settings.py
etc/: host-setup.md  supervisor-example.conf  supervisord.conf
