[tool.poetry]
name = "telegram-activity-emulator"
version = "0.1.0"
authors = ["Simon <spam@esemi.ru>"]
license = "GNU GENERAL PUBLIC LICENSE V3"
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.20240417"
mypy = "^1.9.0"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydantic-settings = "^2.2.1"
uvloop = "^0.19.0"
redis = {extras = ["hiredis"], version = "^5.0.3"}
aiogram = "^3.4.1"

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
line_length = 125
profile = "black"
